# lynx

./: .gitignore  0102_add_sip_service_delivery_type.py  0103_add_sip_service.py  DRAFT-lxc-deploy.sh  Justfile  MAINTENANCE.md  README.md  build-steps-Django-2.2.md  dev_shell.nix  django_notes.md  https-notes.md  nginx-https-live-and-testing.md  nginx.conf  nginx_shell.nix  sp.kdbx
lynx/: manage.py  pyproject.toml  requirements.txt  requirements.txt_4_2  requirements.txt_pip_freeze_unusuable_mess  requirements.txt_upgrade_template
lynx/lynx/: .models.py.swp  admin.py  apps.py  create_views.py  cron.py  cron_scripts.py  delete_views.py  edit_views.py  filters.py  forms.py  models.py  report_views.py  settings.py  support_functions.py  urls.py  validators.py  views.py  wsgi.py
lynx/lynx/migrations/: 0001_initial.py  0002_auto_20190317_1335.py  0002_auto_20190527_1401.py  0003_auto_20190420_1051.py  0003_auto_20190527_1457.py  0004_auto_20190527_1457.py  0005_auto_20190527_1611.py  0006_auto_20190527_1659.py  0007_auto_20190616_1125.py  0008_auto_20190622_1427.py  0009_progressreport.py  0010_auto_20190706_1444.py  0011_auto_20190721_1130.py  0012_auto_20190721_1629.py  0013_auto_20190723_2122.py  0014_auto_20190829_2039.py  0015_auto_20190907_1046.py  0016_contact_active.py  0017_sipnote.py  0018_auto_20190921_1821.py  0019_authorization_class_size.py  0020_auto_20191006_1058.py  0021_auto_20191006_1627.py  0022_auto_20191006_1650.py  0023_auto_20191006_1658.py  0024_auto_20191006_1752.py  (+121 more)
lynx/mysite/: dummy_settings.py  settings.py  urls.py
nix/: dev_shell.nix  (+1 more)
(+128 files in other folders)
